--- a/Src/Styles/style.less
+++ b/Src/Styles/style.less
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import url('Components/navbar.css');
+@import url('Components/navbar.less');
+@import url('variables.less');
 
 
 /* Preset */
@@ -11,13 +12,6 @@
 	font-family: 'Montserrat', sans-serif;
 	list-style: none;
 	text-decoration: none;
-	user-select: none;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-webkit-tap-highlight-color: transparent;
 }
 body{
 	width: 100%;
@@ -30,10 +24,10 @@ body{
 .component{
 	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
+	.flex-coll-center-center()
+}
+button, a, input, label{
+	.romove-user-select()
 }
 textarea {
   resize: none;
